--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@shopify/flash-list": "1.6.3",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
-    "lottie-react-native": "^6.7.2",
+    "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-onboarding-swiper": "^1.2.0",
