--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@shopify/flash-list": "1.6.3",
+    "axios": "^1.6.8",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "^6.5.1",
@@ -25,7 +26,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "twrnc": "^4.2.0"
+    "twrnc": "^4.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
