--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.2.0",
     "twrnc": "^4.2.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-updates": "~0.24.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
